Planner: set system as dominon, set system as starting system

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,7 +4,9 @@
   "costCalculator": "Cost calculator",
   "about": "About",
   "system": "System",
+  "dominion": "Dominion",
   "buildings": "Buildings",
+  "startingSystem": "Starting system",
   "prod": "Prod",
   "goal": "Cost",
   "currentStock": "Current stock",
