--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -4,7 +4,9 @@
   "costCalculator": "Calculateur",
   "about": "À propos",
   "system": "Système ",
+  "dominion": "Dominion",
   "buildings": "Bâtiments ",
+  "startingSystem": "Système de départ",
   "prod": "Prod ",
   "goal": "Coût ",
   "currentStock": "Stock actuel ",
