Planner: updated values for Refining ducts, intel-orb, proxys and convention center

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,5 +13,6 @@
   "time": "Time needed",
   "date": "Date",
   "aboutRisingToolBox": "Toolbox for the game Rising Constellation, produced by Blackflag Games Studio :",
-  "aboutCopyright": "Website's pictures are owned by Blackflag Games Studio."
+  "aboutCopyright": "Website's pictures are owned by Blackflag Games Studio.",
+  "plannerWarning": "Warning: Intel-Orb, Integrated Proxy Systems and Convention Center values might be wrong after level 1."
 }
