--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -13,5 +13,6 @@
   "time": "Temps requis ",
   "date": "Date ",
   "aboutRisingToolBox": "Boîte à outils pour le jeu Rising Constellation, produit par Blackflag Games Studio :",
-  "aboutCopyright": "Les images présentes sur le site appartiennent à Blackflag Games Studio."
+  "aboutCopyright": "Les images présentes sur le site appartiennent à Blackflag Games Studio.",
+  "plannerWarning": "Attention: Les valeurs de l'orbe-intel, des systèmes de proxy intégré et du centre des congrès peuvent être inexactes après le niveau 1"
 }
